# receive-bluetooth-data

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: CustomFormatter.py  shank_thigh_send.proto  shank_thigh_send_pb2.py
src/arduino_bluetooth_program/transmit_bluetooth_data/: transmit_bluetooth_data.ino
src/download_data_to_microsd/: code.py
src/live_transmit_feet/: __main__.py
src/receive_bluetooth_data/: __init__.py  __main__.py  script.py  session0.txt
src/receive_from_leg/: receive_from_leg.ino
src/save_to_microsd/: save_to_microsd.ino
src/transmit_bluetooth_data/: transmit_bluetooth_data.ino
src/transmit_from_leg/: transmit_from_leg.ino
src/transmit_from_leg_updated/: transmit_from_leg_updated.ino
